force-app/main/default/objects/Custom_Auth_Provider__mdt/Custom_Auth_Provider__mdt.object-meta.xml
<CustomObject>
    <label>Custom Auth Provider</label>
    <pluralLabel>Custom Auth Providers</pluralLabel>
</CustomObject>