force-app/main/default/objects/Custom_Auth_Provider__mdt/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <label>Access Token URL</label>
    <type>Url</type>
</CustomField>