force-app/main/default/objects/Custom_Auth_Provider__mdt/fields/Auth_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider_Name__c</fullName>
    <label>Auth Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>