force-app/main/default/objects/Custom_Auth_Provider__mdt/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>