force-app/main/default/objects/Custom_Auth_Provider__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Stores the client id of external system that needs to be integrated</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>